2008-05-01  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1955483:
    * source/org/jfree/data/xy/XYSeries.java
    (addOrUpdate(Number, Number)): Add a new item if duplicates are allows,
    (addOrUpdate(double, double)): New method.

2008-04-29  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/HighLowRenderer.java
    (tickLength): New field,
    (HighLowRenderer): Initialise new field,
    (getTickLength): New method,
    (setTickLength): Likewise,
    (equals): Added check for new field.

2008-04-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/TextTitle.java
    (maximumLinesToDisplay): New field,
    (getMaximumLinesToDisplay): New method,
    (setMaximumLinesToDisplay): Likewise,
    (arrangeFN): Pass maximumLinesToDisplay,
    (arrangeRR): Likewise,
    (equals): Added tests for additional fields.

2008-04-28  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1950037:
    * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java
    (zoomRangeAxes(double, PlotRenderingInfo, Point2D, boolean)): 
    New method override,
    * source/org/jfree/chart/plot/CombinedDomainXYPlot.java
    (zoomRangeAxes(double, PlotRenderingInfo, Point2D, boolean)): 
    New method override,
    * source/org/jfree/chart/plot/CombinedRangeXYPlot.java
    (zoomDomainAxes(double, PlotRenderingInfo, Point2D, boolean)): 
    New method override.

2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1942059:
    * source/org/jfree/chart/axis/CategoryAxis.java
    (calculateTextBlockWidth): Use correct insets.

2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/BubbleXYItemLabelGenerator.java,
    * source/org/jfree/chart/labels/StandardPieSectionLabelGenerator.java:
    Implemented PublicCloneable.

2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>
