@@ -1,3 +1,8 @@
+2008-05-05  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/title/ShortTextTitle.java: New file,
+    * tests/org/jfree/chart/title/junit/ShortTextTitleTests.java: Likewise.
+
 2008-05-01  David Gilbert  <david.gilbert@object-refinery.com>
 
     Bug 1955483:
